*fix: aligned mobile menu button to center

--- a/doc2/private/style/menu/menu.scss
+++ b/doc2/private/style/menu/menu.scss
@@ -31,6 +31,7 @@
     cursor: pointer;
     margin-top: 10px;
     margin-bottom: 20px;
+    text-align: center;
     display: none;
     @media screen and (max-width: $medium) {
       display: block;
